...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E7ED"
    tools:context=".ui.neighbour_list.ViewNeighbourActivity">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:background="#E4E6EC"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favoriteFloatingActionButton"
        style="@android:style/Widget.ActionButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/favorite"
...
